电子围栏添加

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,5 +10,10 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "src/lesson/chapter7/components/wallDiffuseDymaticMaterial.js"
+  ]
 }
